# claude-agents-mcp

./: .gitignore  README.md  pyproject.toml
docs/superpowers/specs/: 2026-05-25-claude-agents-mcp-design.md
src/claude_agents_mcp/: paths.py  reader.py  registry.py  server.py  spawner.py  status.py  tmux_controller.py  tui_state.py
tests/: test_paths.py  test_reader.py  test_registry.py  test_server_tools.py  test_spawner.py  test_status.py  test_tmux_controller.py  test_tui_state.py
