[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-agents-mcp"
version = "0.1.0"
description = "MCP server wrapping Claude Code background agents"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
claude-agents-mcp = "claude_agents_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_agents_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
